k8s/posts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-pod

spec:
  replicas: 1

  selector:
    matchLabels:
      app: posts

  template:
    metadata:
      labels:
        app: posts

    spec:
      containers:
        - name: posts-pod
          image: posts
          imagePullPolicy: Never
          ports:
            - containerPort: 4000
