k8s/posts-pod.yaml
# Version de l'Api de kebernetes qu'on utilise
apiVersion: v1
# Type de l'objet kubernetes deployé
kind: Pod
# Information a propos de l'objet déployé
metadata:
  name: posts-pod
  labels:
    app: posts
spec:
  containers:
    - name: posts-pod
      image: posts
      imagePullPolicy: Never
      ports:
        - containerPort: 4000
