k8s/client-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-srv

spec:
  type: ClusterIP
  selector:
    app: client

  ports:
    - port: 3000
      targetPort: 3000
