k8s/comments-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: comments-srv

spec:
  type: ClusterIP
  selector:
    app: comments

  ports:
    - port: 4001
      targetPort: 4001
