k8s/comments.yaml
# Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl

spec:
  replicas: 1

  selector:
    matchLabels:
      app: comments

  template:
    metadata:
      labels:
        app: comments

    spec:
      containers:
        - name: comments
          image: microservices-comments
          imagePullPolicy: Never
          ports:
            - containerPort: 4001

---
# Service

apiVersion: v1
kind: Service
metadata:
  name: comments-srv

spec:
  type: ClusterIP
  selector:
    app: comments

  ports:
    - port: 4001
      targetPort: 4001

---
# POD
apiVersion: v1
kind: Pod
metadata:
  name: comments-pod
  labels:
    app: comments
spec:
  containers:
    - name: comments-pod
      image: microservices-comments
      imagePullPolicy: Never
      ports:
        - containerPort: 4001
