k8s/event-bus-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv

spec:
  type: ClusterIP
  selector:
    app: event-bus

  ports:
    - port: 4005
      targetPort: 4005
