k8s/moderation-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv

spec:
  type: ClusterIP
  selector:
    app: moderation

  ports:
    - port: 4003
      targetPort: 4003
