k8s/moderation.yaml
# Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl

spec:
  replicas: 1

  selector:
    matchLabels:
      app: moderation

  template:
    metadata:
      labels:
        app: moderation

    spec:
      containers:
        - name: moderation
          image: microservices-moderation:v1
          ports:
            - containerPort: 4003

---
# Service

apiVersion: v1
kind: Service
metadata:
  name: moderation-srv

spec:
  type: ClusterIP
  selector:
    app: moderation

  ports:
    - port: 4003
      targetPort: 4003
