k8s/query.yaml
# Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query-deploy
          image: microservices-query
          imagePullPolicy: Never
          ports:
            - containerPort: 4002

---
# Service

apiVersion: v1
kind: Service
metadata:
  name: query-srv

spec:
  type: ClusterIP
  selector:
    app: query

  ports:
    - port: 4002
      targetPort: 4002

---
# POD
apiVersion: v1
kind: Pod
metadata:
  name: query-pod
  labels:
    app: query
spec:
  containers:
    - name: query-pod
      image: microservices-query
      imagePullPolicy: Never
      ports:
        - containerPort: 4002
